fixes repo url - oops

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 	<main>
 		<h2>Add to your package manager</h2>
 		<menu>
-			<li><a class="sileo" href="sileo://source/https://repo.cypwn.xyz">Sileo</a>
+			<li><a class="sileo" href="sileo://source/https://repo.rugmj.dev">Sileo</a>
 			</li>
-			<li><a class="zebra" href="zbra://sources/add/https://repo.cypwn.xyz">Zebra</a>
+			<li><a class="zebra" href="zbra://sources/add/https://repo.rugmj.dev">Zebra</a>
 			</li>
-			<li><a class="installer" href="installer://add/https://repo.cypwn.xyz">Installer</a>
+			<li><a class="installer" href="installer://add/https://repo.rugmj.dev">Installer</a>
 			</li>
-			<li><a class="cydia" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.cypwn.xyz">Cydia</a>
+			<li><a class="cydia" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.rugmj.dev">Cydia</a>
 			</li>
 		</menu>
 	</main>
